tests/negative/regression/r36.orng
// error: no main function found
// 
impl for () { }